<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>rs.laxsrbija.chores</groupId>
	<artifactId>chores-parent</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>Chores Manager</name>

	<modules>
		<module>chores-backend</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<jsondb-core.version>1.0.106</jsondb-core.version>
		<springdoc-openapi-ui.version>1.6.8</springdoc-openapi-ui.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.jsondb</groupId>
				<artifactId>jsondb-core</artifactId>
				<version>${jsondb-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi-ui.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
